--- a/views/index.pug
+++ b/views/index.pug
@@ -4,10 +4,7 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title GuriVR
     link(href="https://fonts.googleapis.com/css?family=Roboto", rel="stylesheet", type="text/css")
-    link(rel="stylesheet", href="/codemirror.css")
-    link(rel="stylesheet", href="/material.min.css")
-    link(rel="stylesheet", href="/material-icons.css")
-    style * { box-sizing: border-box; } html, body, #root { margin: 0; height: 100%; } .CodeMirror { font-size: 1.3em; }
+    link(rel="stylesheet", href="/styles.css")
   body
     #root
     script
