--- a/views/index.pug
+++ b/views/index.pug
@@ -9,6 +9,7 @@ html
     #root
     script
       | var __user__ = !{JSON.stringify(user)};
+    script(src="https://maps.google.com/maps/api/js?sensor=false", async)
     script(src="/app.js")
     if analyticsId
       script
