--- a/views/index.pug
+++ b/views/index.pug
@@ -5,10 +5,9 @@ html
     title GuriVR
     link(href="https://fonts.googleapis.com/css?family=Roboto", rel="stylesheet", type="text/css")
     link(rel="stylesheet", href="/styles.css")
+    link(rel="manifest", href="/manifest.json")
   body
     #root
-    script
-      | var __user__ = !{JSON.stringify(user)};
     script(src="https://maps.google.com/maps/api/js?sensor=false&key=" + mapsKey, async)
     script(src="/app.js")
     if analyticsId
