added theme color

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,6 +6,7 @@ html
     link(href="https://fonts.googleapis.com/css?family=Roboto", rel="stylesheet", type="text/css")
     link(rel="stylesheet", href="/styles.css")
     link(rel="manifest", href="/manifest.json")
+    meta(name="theme-color", content="#673ab7")
   body
     #root
     script(src="https://maps.google.com/maps/api/js?sensor=false&key=" + mapsKey, async)
