--- a/views/index.pug
+++ b/views/index.pug
@@ -7,6 +7,22 @@ html
     link(rel="stylesheet", href="/styles.css")
     link(rel="manifest", href="/manifest.json")
     meta(name="theme-color", content="#673ab7")
+    meta(name="description", content="Describe your VR experience and the editor will do the rest")
+
+    meta(property="og:title", content="GuriVR")
+    meta(property="og:type", content="website")
+    meta(property="og:image", content="https://s3.amazonaws.com/gurivr/logo.png")
+    meta(property="og:image:width", content="512")
+    meta(property="og:image:height", content="512")
+    meta(property="og:description", content="Describe your VR experience and the editor will do the rest")
+    meta property="og:site_name", content="GuriVR")
+    meta(property="og:locale", content="en_us")
+    meta(name="twitter:card", content="summary")
+    meta(name="twitter:site", content="@guri_vr")
+    meta(property="twitter:url", content="https://gurivr.com/")
+    meta(property="twitter:image", content="https://s3.amazonaws.com/gurivr/logo.png")
+    meta(property="twitter:description", content="Describe your VR experience and the editor will do the rest")
+
   body
     #root
     script(src="https://maps.google.com/maps/api/js?sensor=false&key=" + mapsKey, async)
