Fix on meta bad closing

--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@ html
     meta(property="og:image:width", content="512")
     meta(property="og:image:height", content="512")
     meta(property="og:description", content="Describe your VR experience and the editor will do the rest")
-    meta property="og:site_name", content="GuriVR")
+    meta(property="og:site_name", content="GuriVR")
     meta(property="og:locale", content="en_us")
     meta(name="twitter:card", content="summary")
     meta(name="twitter:site", content="@guri_vr")
