--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,7 @@ html
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title GuriVR
+    link(href="/styles.css", rel="stylesheet")
     link(href="https://fonts.googleapis.com/css?family=Roboto", rel="stylesheet", type="text/css")
     link(href="https://fonts.googleapis.com/css?family=Shrikhand", rel="stylesheet")
     link(rel="manifest", href="/manifest.json")
