--- a/views/index.pug
+++ b/views/index.pug
@@ -4,7 +4,7 @@ html
     meta(name="viewport", content="width=device-width, initial-scale=1")
     title GuriVR
     link(href="/styles.css", rel="stylesheet")
-    link(href="https://fonts.googleapis.com/css?family=Roboto", rel="stylesheet", type="text/css")
+    link(href="https://fonts.googleapis.com/css?family=Roboto:400,700", rel="stylesheet", type="text/css")
     link(href="https://fonts.googleapis.com/css?family=Shrikhand", rel="stylesheet")
     link(rel="manifest", href="/manifest.json")
     meta(name="theme-color", content="#673ab7")
@@ -23,7 +23,7 @@ html
     meta(property="twitter:url", content="https://gurivr.com/")
     meta(property="twitter:image", content="https://s3.amazonaws.com/gurivr/logo.png")
     meta(property="twitter:description", content="Describe your VR experience and the editor will do the rest")
-    
+
   body
     #root
     script(src="https://maps.google.com/maps/api/js?sensor=false&key=" + mapsKey, async)
